--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
+  "homepage": "/cloud-computing-a2/could-computing-a2/build",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
